@@ -45,8 +45,9 @@
 
 #define UPTIME_FILE "/proc/uptime"
 
-static __thread char upbuf[256];
-static __thread char shortbuf[256];
+#define UPTIME_BUFLEN 256
+static __thread char upbuf[UPTIME_BUFLEN];
+static __thread char shortbuf[UPTIME_BUFLEN];
 
 /*
  * users:
@@ -126,107 +127,58 @@ PROCPS_EXPORT int procps_uptime(
     return 0;
 }
 
-/*
- * procps_uptime_sprint:
- *
- * Print current time in nice format
- *
- * Returns a statically allocated upbuf or NULL on error
- */
-PROCPS_EXPORT char *procps_uptime_sprint(void)
-{
-    int upminutes, uphours, updays, users;
-    int pos;
-    time_t realseconds;
-    struct tm realtime;
-    double uptime_secs, idle_secs;
-    double av1, av5, av15;
 
-    upbuf[0] = '\0';
-    if (time(&realseconds) < 0)
-        return upbuf;
-    localtime_r(&realseconds, &realtime);
+#define SECS_IN_DECADE  (60*60*24*365*10)
+#define SECS_IN_YEAR    (60*60*24*365)
+#define SECS_IN_WEEK    (60*60*24*7)
+#define SECS_IN_DAY     (60*60*24)
 
-    if (procps_uptime(&uptime_secs, &idle_secs) < 0)
-        return upbuf;
-
-    if ((users = procps_users()) < 0)
-        return upbuf;
-
-    updays  =   ((int) uptime_secs / (60*60*24));
-    uphours =   ((int) uptime_secs / (60*60)) % 24;
-    upminutes = ((int) uptime_secs / (60)) % 60;
-
-    pos = sprintf(upbuf, " %02d:%02d:%02d up ",
-        realtime.tm_hour, realtime.tm_min, realtime.tm_sec);
-
-    if (updays)
-        pos += sprintf(upbuf + pos, "%d %s, ", updays, (updays != 1) ? "days" : "day");
-
-    if (uphours)
-        pos += sprintf(upbuf + pos, "%2d:%02d, ", uphours, upminutes);
-    else
-        pos += sprintf(upbuf + pos, "%d min, ", upminutes);
-
-    procps_loadavg(&av1, &av5, &av15);
-
-    if (users < 0)
-      pos += sprintf(upbuf + pos, " ? ");
-    else
-      pos += sprintf(upbuf + pos, "%2d ", users);
-
-    pos += sprintf(upbuf + pos, "%s,  load average: %.2f, %.2f, %.2f",
-        users != 1 ? "users" : "user",
-        av1, av5, av15);
-
-    return upbuf;
-}
 
 /*
- * procps_uptime_sprint_short:
+ * Print the actual uptime component only into str
  *
- * Print current time in nice format
+ * Normal: X days, hh:mm OR X days, mm min
+ * Pretty: X decades, X years, X weeks, X days, X hours, X minutes
  *
- * Returns a statically allocated buffer or NULL on error
+ * Note the output may be truncated if it cannot fit into size.
+ *
+ * Returns:
+ *  length of string or < 0 on error
  */
-PROCPS_EXPORT char *procps_uptime_sprint_short(void)
+
+static int snprint_uptime_only(
+        char *restrict str,
+        size_t size,
+        double uptime_secs,
+        const int pretty)
 {
-    int updecades, upyears, upweeks, updays, uphours = 0, upminutes = 0;
-    int pos = 3;
+#define print_this(VAL, UNITS) \
+    if ( (l = snprintf(str + pos, size-pos, "%s%d %s", comma > 0 ? ", " : "", (VAL), (UNITS))) >= size) \
+        return size; \
+    else pos +=l
+    int rv, pos=0, l;
+    int updecades = 0, upyears = 0, upweeks = 0, updays = 0, uphours = 0, upminutes = 0;
     int comma = 0;
-    double uptime_secs, idle_secs;
 
-    shortbuf[0] = '\0';
-    if (procps_uptime(&uptime_secs, &idle_secs) < 0)
-        return shortbuf;
 
-    if (uptime_secs>60*60*24*365*10) {
-      updecades = (int) uptime_secs / (60*60*24*365*10);
-      uptime_secs -= updecades*60*60*24*365*10;
+    if (pretty) {
+        if (uptime_secs > SECS_IN_DECADE) {
+            updecades = (int) uptime_secs / SECS_IN_DECADE;
+            uptime_secs -= updecades * SECS_IN_DECADE;
+        }
+        if (uptime_secs > SECS_IN_YEAR) {
+            upyears = (int) uptime_secs / SECS_IN_YEAR;
+            uptime_secs -= upyears * SECS_IN_YEAR;
+        }
+        if (uptime_secs > SECS_IN_WEEK) {
+            upweeks = (int) uptime_secs / SECS_IN_WEEK;
+            uptime_secs -= upweeks * SECS_IN_WEEK;
+        }
     }
-    else {
-      updecades = 0;
-    }
-    if (uptime_secs>60*60*24*365) {
-      upyears = (int) uptime_secs / (60*60*24*365);
-      uptime_secs -= upyears*60*60*24*365;
-    }
-    else {
-      upyears = 0;
-    }
-    if (uptime_secs>60*60*24*7) {
-      upweeks = (int) uptime_secs / (60*60*24*7);
-      uptime_secs -= upweeks*60*60*24*7;
-    }
-    else {
-      upweeks = 0;
-    }
-    if (uptime_secs>60*60*24) {
-      updays = (int) uptime_secs / (60*60*24);
-      uptime_secs -= updays*60*60*24;
-    }
-    else {
-      updays = 0;
+    /* all formats get the following */
+    if (uptime_secs > SECS_IN_DAY) {
+        updays = (int) uptime_secs / SECS_IN_DAY;
+        uptime_secs -= updays * SECS_IN_DAY;
     }
     if (uptime_secs>60*60) {
         uphours = (int) uptime_secs / (60*60);
@@ -236,54 +188,161 @@ PROCPS_EXPORT char *procps_uptime_sprint_short(void)
         upminutes = (int) uptime_secs / 60;
         uptime_secs -= upminutes*60;
     }
-    /*updecades =  (int) uptime_secs / (60*60*24*365*10);
-    upyears =   ((int) uptime_secs / (60*60*24*365)) % 10;
-    upweeks =   ((int) uptime_secs / (60*60*24*7)) % 52;
-    updays  =   ((int) uptime_secs / (60*60*24)) % 7;
-    uphours =   ((int) uptime_secs / (60*60)) % 24;
-    upminutes = ((int) uptime_secs / (60)) % 60;
-*/
-    strcat(shortbuf, "up ");
 
-    if (updecades) {
-        pos += sprintf(shortbuf + pos, "%d %s",
-                       updecades, updecades > 1 ? "decades" : "decade");
-        comma += 1;
+    if (pretty) {
+        if (updecades) {
+            print_this(updecades, updecades > 1 ? "decades" : "decade");
+            comma += 1;
+        }
+
+        if (upyears) {
+            print_this(upyears, upyears > 1 ? "years" : "year");
+            comma += 1;
+        }
+
+        if (upweeks) {
+            print_this(upweeks, upweeks > 1 ? "weeks" : "week");
+            comma += 1;
+        }
     }
-
-    if (upyears) {
-        pos += sprintf(shortbuf + pos, "%s%d %s",
-                       comma > 0 ? ", " : "", upyears,
-                       upyears > 1 ? "years" : "year");
-        comma += 1;
-    }
-
-    if (upweeks) {
-        pos += sprintf(shortbuf + pos, "%s%d %s",
-                       comma  > 0 ? ", " : "", upweeks,
-                       upweeks > 1 ? "weeks" : "week");
-        comma += 1;
-    }
-
+    /* Both formats get days */
     if (updays) {
-        pos += sprintf(shortbuf + pos, "%s%d %s",
-                       comma  > 0 ? ", " : "", updays,
-                       updays != 1 ? "days" : "day");
+        print_this(updays, updays != 1 ? "days" : "day");
         comma += 1;
     }
 
-    if (uphours) {
-        pos += sprintf(shortbuf + pos, "%s%d %s",
-                       comma  > 0 ? ", " : "", uphours,
-                       uphours > 1 ? "hours" : "hour");
-        comma += 1;
+    if (pretty) {
+        if (uphours) {
+            print_this(uphours, uphours > 1 ? "hours" : "hour");
+            comma += 1;
+        }
+
+        if (upminutes || (!upminutes && uptime_secs <= 60)) {
+            print_this(upminutes, upminutes > 1 ? "minutes" : "minute");
+            comma += 1;
+        }
+    } else {
+        if (uphours) {
+            if ( (l = snprintf(str + pos, size - pos, "%s%2d:%02d", comma > 0 ? ", " : "", uphours, upminutes)) >= size)
+                return size;
+            else pos +=l;
+        } else {
+            print_this(upminutes, "min");
+        }
+    }
+    return pos;
+}
+/*
+ * procps_uptime_snprint():
+ *
+ * print the standard formats of uptime into the buffer str up to
+ * the given length 
+ *
+ * @str: destination buffer
+ * @size: length of destination buffer
+ * @uptime_secs: Uptime of system/container, from procps_uptime() usually
+ * @pretty: 0/1 sets pretty expanded format fo uptime component
+ *
+ * Returns:
+ *  length of string
+ *  < 0 on error
+ */
+PROCPS_EXPORT int procps_uptime_snprint(
+        char *restrict str,
+        size_t size,
+        double uptime_secs,
+        const int pretty)
+{
+    int l,pos=0;
+    time_t realseconds;
+    struct tm realtime;
+    int users;
+    double av1, av5, av15;
+
+    if (str == NULL)
+        return -EINVAL;
+    str[0] = '\0';
+
+    if ( time(&realseconds) < 0)
+        return -errno;
+    localtime_r(&realseconds, &realtime);
+
+    if (pretty) {
+        if ( (l = snprintf(str + pos, size-pos, "%s", "up ")) >= size-pos)
+            return size;
+        pos +=l;
+    } else {
+        if ( (l = snprintf(str + pos, size-pos, " %02d:%02d:%02d up ",
+                        realtime.tm_hour, realtime.tm_min, realtime.tm_sec)) >= size-pos)
+            return size;
+        pos +=l;
+    }
+    l = snprint_uptime_only(str+pos, size-pos, uptime_secs, pretty);
+    if (l >= size - pos)
+        return size;
+    if (l > 0)
+        pos += l;
+
+    if (pretty) // That's all it prints
+        return pos;
+
+    // print number of users, format ends with comma and two spaces
+    users = procps_users();
+    if (users < 0) {
+        if ( (l = snprintf(str+pos, size-pos, ", ? users,  ")) >= size-pos)
+            return size;
+        pos += l;
+    } else {
+        if ( (l = snprintf(str+pos, size-pos, ", %2d %s,  ",
+                        users,
+                        users != 1 ? "users" : "user")) >= size-pos)
+            return size;
+        pos += l;
     }
 
-    if (upminutes || (!upminutes && uptime_secs <= 60)) {
-        pos += sprintf(shortbuf + pos, "%s%d %s",
-                       comma > 0 ? ", " : "", upminutes,
-                       upminutes != 1 ? "minutes" : "minute");
-        comma += 1;
-    }
+    procps_loadavg(&av1, &av5, &av15);
+    if ( (l = snprintf(str+pos, size-pos, "load average: %.2f, %.2f, %.2f",
+                    av1, av5, av15)) >= size-pos)
+        return size;
+    pos += l;
+
+    return pos;
+}
+
+/*
+ * procps_uptime_sprint:
+ *
+ * Print current system uptime in nice format
+ *
+ * Returns a statically allocated upbuf
+ */
+PROCPS_EXPORT char *procps_uptime_sprint(void)
+{
+    double uptime_secs;
+
+    upbuf[0] = '\0';
+    if (procps_uptime(&uptime_secs, NULL) < 0)
+        return shortbuf;
+
+    procps_uptime_snprint( shortbuf, UPTIME_BUFLEN, uptime_secs, 0);
+    return upbuf;
+}
+
+/*
+ * procps_uptime_sprint_short:
+ *
+ * Print current system uptime in nice format
+ *
+ * Returns a statically allocated buffer
+ */
+PROCPS_EXPORT char *procps_uptime_sprint_short(void)
+{
+    double uptime_secs;
+
+    shortbuf[0] = '\0';
+    if (procps_uptime(&uptime_secs, NULL) < 0)
+        return shortbuf;
+
+    procps_uptime_snprint( shortbuf, UPTIME_BUFLEN, uptime_secs, 1);
     return shortbuf;
 }
